# ascii-rendr

./: .gitignore  CHANGELOG.md  Cargo.toml  GPU_PLAN.md  LICENSE  PERFORMANCE.md  README.md  setup-hooks.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  version-check.yml
gui/: Cargo.toml
gui/src/: app.rs  main.rs
lib/: Cargo.toml
lib/examples/: basic.rs  resize_demo.rs
lib/src/: ascii.rs  config.rs  edges.rs  filters.rs  lib.rs  lut.rs  processor.rs
